<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeFragment"
    android:background="@drawable/background_gradient">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/app_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomView"/>

    <View
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:background="@drawable/rec_border_shape"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_fitoozone"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:padding="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_des"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/iv_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dot1"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_next"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:layout_marginHorizontal="@dimen/_16ssp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/sign_in_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account_sign_in"
        android:layout_marginBottom="@dimen/_24sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>